# RemQuiz1

./: README.md
Flashnotes/: CMakeLists.txt  README.md
Flashnotes/include/controllers/: AppController.hpp  FileController.hpp  FlashcardController.hpp  FlashcardSetController.hpp  NotesController.hpp
Flashnotes/include/domain/: flashcard.hpp  flashcard_set.hpp  folder.hpp  folder_tree.hpp  material.hpp  note.hpp
Flashnotes/include/services/: FileService.hpp  FlashcardService.hpp  FlashcardSetService.hpp  JsonPersistenceService.hpp  NotesService.hpp
Flashnotes/include/utils/: Expected.hpp  Logger.hpp
Flashnotes/src/: main.cpp
Flashnotes/src/controllers/: AppController.cpp  FileController.cpp  FlashcardController.cpp  FlashcardSetController.cpp  NotesController.cpp
Flashnotes/src/domain/: flashcard.cpp  flashcard_set.cpp  folder.cpp  note.cpp
Flashnotes/src/gui/: CMakeLists.txt  FileManagerForm.cpp  FileManagerForm.h  FlashcardPracticeForm.cpp  FlashcardPracticeForm.h  FlashcardSetEditorForm.cpp  FlashcardSetEditorForm.h  MainWindow.cpp  MainWindow.h  NoteEditorForm.cpp  NoteEditorForm.h  Program.cpp
Flashnotes/src/services/: FileService.cpp  FlashcardService.cpp  FlashcardSetService.cpp  JsonPersistenceService.cpp  NotesService.cpp
Flashnotes/src/utils/: Logger.cpp
Flashnotes/tests/: domain_flashcard.cpp  domain_folder.cpp  domain_note.cpp  file_service.cpp  flashcard_service.cpp  flashcard_set_service.cpp  notes_controller.cpp  notes_service.cpp  persistence_folder.cpp  persistence_note.cpp  smoke.cpp
